# calchas

./: .gitignore  LICENSE  README.md  lint.sh  pyproject.toml  setup.cfg  test.sh
.github/workflows/: ci.yml
src/calchas/datasets/: documents_dataset.py
src/calchas/nodes/: logger.py
src/calchas/pipelines/: construct_noun_head_dep_graph.py
src/tests/: conftest.py
