[tool.poetry]
name = "calchas"
version = "0.0.0"
description = "Constructs noun token headed dependency graphs of documents, builds head noun token co-occurrence graph and groups documents based on the co-occurrence graph"
authors = ["MacarielAerial <yyu.mam2020@london.edu>"]
license = "MIT"
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.9"
networkx = "^2.7.1"
spacy = "^3.2.3"
dataclasses-json = "^0.5.6"
en-core-web-sm = {url = "https://github.com/explosion/spacy-models/releases/download/en_core_web_sm-3.2.0/en_core_web_sm-3.2.0.tar.gz#egg=en_core_web_sm"}

[tool.poetry.group.dev.dependencies]
isort = "^5.10.1"
black = "^22.1.0"
flake8 = "^4.0.1"
mypy = "^0.941"
pytest = "^7.1.1"
pytest-cov = "^3.0.0"
semgrep = "^0.85.0"
yamllint = "^1.26.3"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"

[tool.black]
exclude = '.venv'
line-length = 88

[tool.isort]
profile = 'black'
skip = '.venv'

[tool.pytest.ini_options]
testpaths = "src/tests"
log_cli = true
log_cli_level = "INFO"
log_cli_format = "%(asctime)s [%(levelname)8s] %(message)s (%(filename)s:%(lineno)s)"
log_cli_date_format = "%Y-%m-%d %H:%M:%S"
addopts = "--cov=calchas --cov-branch --cov-report=html --cov-report=term-missing:skip-covered --cov-report=xml --no-cov-on-fail --junitxml=test_report.xml --cov-config=.coveragerc"

[tool.mypy]
disallow_untyped_defs = true
disallow_any_unimported = true
no_implicit_optional = true
check_untyped_defs = true
warn_return_any = true
warn_unused_ignores = true
show_error_codes = true
